--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
     "format:check": "prettier --check .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
   "imports": {
     "#*": "./src/*"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -32,6 +30,9 @@
     "@tsconfig/node22": "^22.0.5",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
